Criação de VIEW da página LOGIN

--- a/projeto-itegrador-2semestre-fatec/projeto-itegrador-2semestre-fatec.csproj
+++ b/projeto-itegrador-2semestre-fatec/projeto-itegrador-2semestre-fatec.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>projeto_itegrador_2semestre_fatec</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.3.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
