--- a/projeto-itegrador-2semestre-fatec/projeto-itegrador-2semestre-fatec.csproj
+++ b/projeto-itegrador-2semestre-fatec/projeto-itegrador-2semestre-fatec.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,5 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>projeto_itegrador_2semestre_fatec</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.3.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
 
 </Project>
